# amg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cargo-binstall.toml  release-plz.toml
.config/: nextest.toml
.cursor/rules/ci-checks-and-commits/: RULE.md
.cursor/rules/code-style/: RULE.md
.cursor/rules/commits/: RULE.md
.cursor/rules/refactoring/: RULE.md
.cursor/rules/testing/: RULE.md
.github/workflows/: ci.yml  release-plz.yml
docs/: BITWARDEN_GITHUB_ACTIONS.md  BITWARDEN_SETUP.md
scripts/: release-with-bitwarden.sh  setup-bitwarden.sh
src/: lib.rs
src/cli/: args.rs  codex_cmd.rs  constants.rs  logging.rs  mod.rs  prelude.rs  process.rs  scan.rs  util.rs
src/codex_resume_branch/: cli.rs  codex_cmd.rs  logging.rs  mod.rs  prelude.rs  process.rs  scan.rs  util.rs
tests/: cli_help.rs  format.rs
