[package]
name = "amg"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
default-run = "amg"
description = "Resume Codex sessions by git branch"
authors = ["Cardosaum"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cardosaum/amg"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[bin]]
name = "amg"
path = "src/bin/amg.rs"

[lints.rust]
unused = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
dead_code = "deny"

[lints.clippy]
all = "deny"

[dev-dependencies]
rstest = "0.26.1"
